; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_pmap_common.c_pmap_disconnect_options.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_pmap_common.c_pmap_disconnect_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vm_page_fictitious_addr = common dso_local global i64 0, align 8
@vm_page_guard_addr = common dso_local global i64 0, align 8
@PMAP_OPTIONS_NOREFMOD = common dso_local global i32 0, align 4
@pmap_phys_attributes = common dso_local global i32* null, align 8
@PHYS_MODIFIED = common dso_local global i32 0, align 4
@PHYS_REFERENCED = common dso_local global i32 0, align 4
@VM_MEM_MODIFIED = common dso_local global i32 0, align 4
@VM_MEM_REFERENCED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pmap_disconnect_options(i64 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 0, i32* %9, align 4
  %10 = load i64, i64* %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 @pmap_page_protect_options(i64 %10, i32 0, i32 %11, i8* %12)
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @vm_page_fictitious_addr, align 8
  %16 = icmp ne i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @pmap_assert(i32 %17)
  %19 = load i64, i64* %5, align 8
  %20 = load i64, i64* @vm_page_guard_addr, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %31, label %22

22:                                               ; preds = %3
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @IS_MANAGED_PAGE(i64 %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %31

26:                                               ; preds = %22
  %27 = load i32, i32* %6, align 4
  %28 = load i32, i32* @PMAP_OPTIONS_NOREFMOD, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %26, %22, %3
  store i32 0, i32* %4, align 4
  br label %60

32:                                               ; preds = %26
  %33 = load i32*, i32** @pmap_phys_attributes, align 8
  %34 = load i64, i64* %5, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @PHYS_MODIFIED, align 4
  %38 = load i32, i32* @PHYS_REFERENCED, align 4
  %39 = or i32 %37, %38
  %40 = and i32 %36, %39
  store i32 %40, i32* %8, align 4
  %41 = load i32, i32* %8, align 4
  %42 = load i32, i32* @PHYS_MODIFIED, align 4
  %43 = and i32 %41, %42
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %49

45:                                               ; preds = %32
  %46 = load i32, i32* @VM_MEM_MODIFIED, align 4
  %47 = load i32, i32* %9, align 4
  %48 = or i32 %47, %46
  store i32 %48, i32* %9, align 4
  br label %49

49:                                               ; preds = %45, %32
  %50 = load i32, i32* %8, align 4
  %51 = load i32, i32* @PHYS_REFERENCED, align 4
  %52 = and i32 %50, %51
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %58

54:                                               ; preds = %49
  %55 = load i32, i32* @VM_MEM_REFERENCED, align 4
  %56 = load i32, i32* %9, align 4
  %57 = or i32 %56, %55
  store i32 %57, i32* %9, align 4
  br label %58

58:                                               ; preds = %54, %49
  %59 = load i32, i32* %9, align 4
  store i32 %59, i32* %4, align 4
  br label %60

60:                                               ; preds = %58, %31
  %61 = load i32, i32* %4, align 4
  ret i32 %61
}

declare dso_local i32 @pmap_page_protect_options(i64, i32, i32, i8*) #1

declare dso_local i32 @pmap_assert(i32) #1

declare dso_local i32 @IS_MANAGED_PAGE(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
